force-app/main/default/objects/GGW_Selected_Item__c/GGW_Selected_Item__c.object-meta.xml
<CustomObject>
    <description>Junction link for Grant application and content blocks</description>
    <label>Selected Item</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>