force-app/main/default/objects/GGW_Selected_Item__c/fields/GGW_Section__c.field-meta.xml
<CustomField>
    <fullName>GGW_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to section</description>
    <inlineHelpText>Link to section</inlineHelpText>
    <label>Section</label>
    <referenceTo>GGW_Section__c</referenceTo>
    <relationshipLabel>Selected Items</relationshipLabel>
    <relationshipName>Selected_Items</relationshipName>
    <type>Lookup</type>
</CustomField>