force-app/main/default/objects/GGW_Selected_Item__c/fields/Grant_Application__c.field-meta.xml
<CustomField>
    <fullName>Grant_Application__c</fullName>
    <description>Grant Application master record</description>
    <inlineHelpText>Grant Application master record parent</inlineHelpText>
    <label>Grant Application</label>
    <referenceTo>GGW_Grant_Application__c</referenceTo>
    <relationshipLabel>Selected Items</relationshipLabel>
    <relationshipName>Selected_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>