force-app/main/default/objects/GGW_Selected_Item__c/fields/Langauge__c.field-meta.xml
<CustomField>
    <fullName>Langauge__c</fullName>
    <formula>TEXT(Grant_Application__r.Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Langauge</label>
    <type>Text</type>
</CustomField>