force-app/main/default/objects/GGW_Selected_Item__c/fields/Selected_Block__c.field-meta.xml
<CustomField>
    <fullName>Selected_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a chose text block for section to use in Grant application</description>
    <inlineHelpText>Link to a chose text block for section to use in Grant application</inlineHelpText>
    <label>Selected Block</label>
    <referenceTo>GGW_Content_Block__c</referenceTo>
    <relationshipLabel>Selected Items</relationshipLabel>
    <relationshipName>Selected_Items</relationshipName>
    <type>Lookup</type>
</CustomField>