force-app/main/default/objects/GGW_Selected_Item__c/fields/Text_Block__c.field-meta.xml
<CustomField>
    <fullName>Text_Block__c</fullName>
    <description>Formatted rich text holds a copy of block of content or new content for editing and grant.</description>
    <inlineHelpText>Formatted rich text holds a copy of block of content or new content for editing and grant.</inlineHelpText>
    <label>Text Block</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>